[package]
name = "decode_kyma_vcs_event"
version = "0.1.11"
edition = "2024"
authors = ["Cristián Vogel"]
description = "A Rust crate to decode optimised Kyma '/vcs,b' messages into EventID-value pairs."
license = "MIT OR Apache-2.0"
keywords = ["kyma", "decoding", "osc"]
categories = ["encoding", "parsing"]
repository = "https://github.com/cristianvogel/decode_kyma_vcs_event"

[dependencies]
