[package]
name = "decode_kyma_vcs_event"
include = ["src/**", "Cargo.toml", "README.md"]
version = "0.1.23"
edition = "2021"
authors = ["Cristián Vogel"]
description = "A Rust crate to decode optimised Symbolic Sound Kyma '/vcs,b' OSC messages into EventID-value pairs."
license = "MIT OR Apache-2.0"
keywords = ["kyma", "decoding", "osc"]
categories = ["encoding", "parsing"]
repository = "https://github.com/cristianvogel/decode_kyma_vcs_event"

[dependencies]
# Declare serde as an optional dependency
serde = { version = "1.0", optional = false, features = ["derive"] }